test/files/neg/t9273.check
t9273.scala:3: error: not found: type X
  val foo1: Class[_] = classOf[X]        // good error, all info contained
                               ^
t9273.scala:7: error: not found: type X
  val foo4: Class[_] = Predef.classOf[X] // good error, all info contained
                                      ^
two errors found
